# mining_dataset_training

./: config.yaml  pyproject.toml
data/: clean_data.csv  raw_data.csv  transformed_data.csv  transformed_normalized_data.csv
notebooks/: 01_load_and_clean_data.ipynb  02_feature_engineering.ipynb  03_linear_models.ipynb  04_tree_models.ipynb  06_process_improvement.ipynb  06_process_improvement0.ipynb  07_deployment_preparation.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/180358635567956149/: meta.yaml
notebooks/mlruns/180358635567956149/015740c86cea4d2e9d13f3346a27331d/: meta.yaml
notebooks/mlruns/180358635567956149/071d042aa98744809dbfbe159bffdcde/: meta.yaml
notebooks/mlruns/180358635567956149/085dcd6c122b4f088a3ed693bb32c13f/: meta.yaml
notebooks/mlruns/180358635567956149/1296d862b6dc45fa88367533dcda5a94/: meta.yaml
notebooks/mlruns/180358635567956149/2972ffbade994cac8bf743d1bb3e5f7e/: meta.yaml
notebooks/mlruns/180358635567956149/3122e885f2004fffaf152a907cdc3689/: meta.yaml
notebooks/mlruns/180358635567956149/32ebd7fee7a7445c801acaed64d11264/: meta.yaml
notebooks/mlruns/180358635567956149/338d5d95c5404a929bae656a255afcfd/: meta.yaml
notebooks/mlruns/180358635567956149/43183f4f9f5a461d8ff64fb410a330e5/: meta.yaml
notebooks/mlruns/180358635567956149/63a2754e2b2f468180f3dca45ca3cf1a/: meta.yaml
notebooks/mlruns/180358635567956149/68d7f8a8f66f4434afa184d2c5c1dc3e/: meta.yaml
notebooks/mlruns/180358635567956149/6cfb6274d8c14ea0baf490b7af09e087/: meta.yaml
(+331 files in other folders)
