[tool.poetry]
name = "mining-dataset-training"
version = "0.1.0"
description = ""
authors = ["Santiago <santiago.zapata2588@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.3.2"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
plotly = "^6.3.0"
scikit-learn = "^1.7.1"
xgboost = "^3.0.4"
lightgbm = "^4.6.0"
optuna = "^4.4.0"
joblib = "^1.5.1"
jupyter = "^1.1.1"
tqdm = "^4.67.1"
ipykernel = "^6.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
